Edited and Added sections. Adjusted information and filling in sections

--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-body{background-color: #f0f8fb;}
+body{background-color: #ffffff;}
 
 
 
@@ -35,3 +35,4 @@ a.text-primary:hover{
     margin-left: 7vw;
     margin-right: 7vw;
 }
+
