--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,29 @@
-body{background-color: #ffffff;}
 
+body {
+    background-image: url('media/webpc-passthru.avif');
+    /* background-size: cover; */
+    /* background-repeat: repeat; */
+}
 
+.container {
+    background-color: rgb(255, 255, 255); /* Adjust the opacity as needed */
+    padding: 10px;
+margin: auto;
+}
+.container2 {
+    background-color: rgb(255, 255, 255); /* Adjust the opacity as needed */
+    padding: 0px 50px; /* Adjust the padding as needed */
+}
+
+@media (max-width: 500px) {
+    .container2 {
+        padding: 0px; /* Revert to no padding when screen size is less than 500px */
+    }
+    body {
+        background-image: none;
+        
+    }
+}
 
 
 .bg-primary {
